--- a/app/src/main/res/layout/activity_creacion_evento.xml
+++ b/app/src/main/res/layout/activity_creacion_evento.xml
@@ -238,7 +238,6 @@
             android:id="@+id/btn_Guardar"
             android:layout_width="207dp"
             android:layout_height="49dp"
-            android:layout_marginStart="120dp"
             android:layout_marginTop="40dp"
             android:background="@drawable/round_button_background"
             android:backgroundTint="@color/white"
@@ -247,6 +246,7 @@
             android:textAlignment="center"
             android:textColor="@color/purple_700"
             android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/editTextRequisitos" />
 
