--- a/app/src/main/res/layout/activity_registrar_asociaciones.xml
+++ b/app/src/main/res/layout/activity_registrar_asociaciones.xml
@@ -18,8 +18,8 @@
             android:id="@+id/btn_SumarMiembro"
             android:layout_width="71dp"
             android:layout_height="49dp"
+            android:layout_marginStart="100dp"
             android:layout_marginTop="4dp"
-            android:layout_marginEnd="24dp"
             android:background="@drawable/round_button_background"
             android:backgroundTint="@color/white"
             android:fontFamily="sans-serif-medium"
@@ -28,13 +28,13 @@
             android:textColor="@color/purple_700"
             android:textSize="20sp"
             app:layout_constraintEnd_toStartOf="@+id/btn_RestarMiembro"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/idCarnetMiembro" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_Guardar"
             android:layout_width="200dp"
             android:layout_height="52dp"
-            android:layout_marginStart="120dp"
             android:layout_marginTop="84dp"
             android:background="@drawable/round_button_background"
             android:backgroundTint="@color/white"
@@ -43,6 +43,7 @@
             android:textAlignment="center"
             android:textColor="@color/purple_700"
             android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scrollViewMiembros" />
 
@@ -51,6 +52,7 @@
             android:layout_width="71dp"
             android:layout_height="49dp"
             android:layout_marginTop="4dp"
+            android:layout_marginEnd="100dp"
             android:background="@drawable/round_button_background"
             android:backgroundTint="@color/white"
             android:fontFamily="sans-serif-medium"
@@ -59,17 +61,14 @@
             android:textColor="@color/purple_700"
             android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.597"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_SumarMiembro"
             app:layout_constraintTop_toBottomOf="@+id/idCarnetMiembro" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nombreAsociacion"
             android:layout_width="334dp"
             android:layout_height="52dp"
-            android:layout_marginStart="38dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="39dp"
             android:backgroundTint="#F6F6F6"
             android:hint="Nombre"
             android:inputType="text"
@@ -143,7 +142,6 @@
             android:layout_width="334dp"
             android:layout_height="52dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="36dp"
             android:backgroundTint="#F6F6F6"
             android:hint="Descripción"
             android:inputType="text"
@@ -153,7 +151,6 @@
             android:textColorHint="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.723"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nombreAsociacion" />
 
@@ -179,7 +176,6 @@
             android:id="@+id/texto13"
             android:layout_width="318dp"
             android:layout_height="41dp"
-            android:layout_marginEnd="37dp"
             android:fontFamily="sans-serif-medium"
             android:text="Datos de la Asociación"
             android:textAlignment="center"
@@ -189,7 +185,6 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.791"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.078" />
@@ -198,11 +193,9 @@
             android:id="@+id/scrollViewMiembros"
             android:layout_width="335dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
             android:layout_marginTop="12dp"
             android:contentDescription="miembros"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.455"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_RestarMiembro">
 
