--- a/app/src/main/res/layout/activity_registrar_colaborador.xml
+++ b/app/src/main/res/layout/activity_registrar_colaborador.xml
@@ -25,8 +25,7 @@
             android:textAlignment="center"
             android:textColor="@color/purple_700"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@+id/spinnerSedeColab"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_Cancelar"
             app:layout_constraintTop_toBottomOf="@+id/DescripcionColab" />
 
@@ -42,9 +41,8 @@
             android:textAlignment="center"
             android:textColor="@color/purple_700"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.004"
-            app:layout_constraintStart_toStartOf="@+id/textViewSede"
+            app:layout_constraintEnd_toStartOf="@+id/btn_Guardar"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/spinnerSedeColab" />
 
         <com.google.android.material.textfield.TextInputEditText
@@ -146,7 +144,6 @@
             android:layout_width="334dp"
             android:layout_height="52dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="36dp"
             android:backgroundTint="#F6F6F6"
             android:hint="Segundo apellido"
             android:inputType="text"
@@ -156,7 +153,6 @@
             android:textColorHint="#FFFFFF"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Apellido1" />
 
@@ -184,7 +180,6 @@
             android:layout_width="318dp"
             android:layout_height="41dp"
             android:layout_marginTop="50dp"
-            android:layout_marginEnd="37dp"
             android:fontFamily="sans-serif-medium"
             android:text="Datos del  colaborador"
             android:textAlignment="center"
@@ -193,7 +188,6 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.821"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
