--- a/app/src/main/res/layout/activity_asignar_colaborador.xml
+++ b/app/src/main/res/layout/activity_asignar_colaborador.xml
@@ -33,8 +33,9 @@
         android:inputType="text"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
-        android:text="Carnet"
+        android:hint="Carnet"
         android:textColor="#FFFFFF"
+        android:textColorHint="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,9 +97,9 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textView2"
-                android:layout_width="314dp"
-                android:layout_height="26dp"
+                android:id="@+id/textView"
+                android:layout_width="290dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="225dp"
@@ -110,17 +111,17 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/codigoAsignar"
-        android:layout_width="290dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="40dp"
+        android:id="@+id/nombreEvAsignar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="36dp"
         android:layout_marginEnd="80dp"
-        android:text="Codigo de evento/actividad:"
+        android:text="Nombre de evento/actividad:"
         android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/idCarnetColab2"
+        app:layout_constraintStart_toStartOf="@+id/idCarnetColab"
         app:layout_constraintTop_toBottomOf="@+id/texto22" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
