--- a/app/src/main/res/layout/activity_lobby_estudiantes.xml
+++ b/app/src/main/res/layout/activity_lobby_estudiantes.xml
@@ -60,10 +60,10 @@
         android:layout_width="77dp"
         android:layout_height="67dp"
         android:layout_marginStart="74dp"
-        android:layout_marginEnd="260dp"
-        android:layout_marginBottom="600dp"
+        android:layout_marginBottom="596dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/logo" />
 
