--- a/app/src/main/res/layout/activity_crear_actividad.xml
+++ b/app/src/main/res/layout/activity_crear_actividad.xml
@@ -154,7 +154,7 @@
             android:layout_width="350dp"
             android:layout_height="50dp"
             android:layout_marginTop="30dp"
-            android:text="Crear Actvidad"
+            android:text="Crear Actividad"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
