--- a/app/src/main/res/layout/activity_lobby_asociaciones.xml
+++ b/app/src/main/res/layout/activity_lobby_asociaciones.xml
@@ -8,6 +8,23 @@
     android:background="@drawable/backgroundmain">
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btn_ConsultarActividades"
+            android:layout_width="258dp"
+            android:layout_height="63dp"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/round_button_background"
+            android:backgroundTint="@color/white"
+            android:fontFamily="sans-serif-medium"
+            android:text="Consultar Actividades"
+            android:textAlignment="center"
+            android:textColor="@color/purple_700"
+            android:textSize="16sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.503"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_CreacionActividad" />
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_CreacionEventos"
             android:layout_width="258dp"
             android:layout_height="63dp"
